--- a/book.html
+++ b/book.html
@@ -738,7 +738,7 @@ input:checked + .toggle-slider:before {
         <div id="sidebar" class="sidebar fixed inset-y-0 left-0 z-30 w-64 bg-black text-white lg:static lg:inset-0 lg:translate-x-0">
             <div class="flex items-center justify-between p-4 border-b border-gray-800">
                 <div class="flex items-center">
-                    <h1 class="text-xl font-bold">freeze<span class="text-yellow-400">FIX</span></h1>
+                    <h1 class="text-xl font-bold">freeze<span class="text-yellow-400">PIX</span></h1>
                 </div>
                 <button id="close-sidebar-btn" class="lg:hidden">
                     <i class="fas fa-times text-xl"></i>
