--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
     </div>
     
     <div class="mermaid-container">
-        <div class="mermaid">
+        IN MAINTENANCE
+        <!-- <div class="mermaid">
             erDiagram
                 STUDIO {
                     INT id PK
@@ -247,7 +248,7 @@
                 BOOKINGS ||--o{ RATING : "generates"
                 RATING ||--o{ RATING_RESPONSE : "may_have"
                 RATING }o--o{ RATING_ATTRIBUTE : "includes"
-        </div>
+        </div>-->
     </div>
   <h1>Database Schema Detailed Tables</h1>
 
