--- a/book.html
+++ b/book.html
@@ -1112,7 +1112,7 @@ input:checked + .toggle-slider:before {
 </button>
 </div>
 <div class="modal-body">
-<!-- Booking details content would go here -->
+<!-- Booking details content would go here 
 <div class="space-y-4">
 <div>
 <h4 class="text-sm font-medium text-gray-500">Service</h4>
@@ -1144,7 +1144,7 @@ Confirmed
 <p class="text-sm">Client requested blue background</p>
 </div>
 </div>
-</div>
+</div>-->
 <div class="modal-footer">
 <button class="px-4 py-2 border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">
 Close
