--- a/book.html
+++ b/book.html
@@ -813,7 +813,7 @@ input:checked + .toggle-slider:before {
             <div class="w-10 h-10 rounded-full bg-green-100 text-green-500 flex items-center justify-center mb-2">
                 <i class="fas fa-file-invoice-dollar"></i>
             </div>
-            <span class="text-sm">Create Invoice</span>
+            <span class="text-sm">Check Invoices</span>
         </button>
         
         <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
