--- a/book.html
+++ b/book.html
@@ -802,12 +802,12 @@ input:checked + .toggle-slider:before {
             <span class="text-sm">Confirm Bookings</span>
         </button>
         
-        <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
+      <!--  <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
             <div class="w-10 h-10 rounded-full bg-blue-100 text-blue-500 flex items-center justify-center mb-2">
                 <i class="fas fa-camera"></i>
             </div>
             <span class="text-sm">Upload Gallery</span>
-        </button>
+        </button>-->
         
         <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
             <div class="w-10 h-10 rounded-full bg-green-100 text-green-500 flex items-center justify-center mb-2">
