--- a/book.html
+++ b/book.html
@@ -794,7 +794,7 @@ input:checked + .toggle-slider:before {
                     <!-- Quick Actions -->
 <div class="bg-white rounded-lg shadow p-4 mb-6">
     <h2 class="text-lg font-semibold mb-4">Quick Actions</h2>
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+    <div class="flex justify-center gap-4 flex-wrap">
         <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
             <div class="w-10 h-10 rounded-full bg-yellow-100 text-yellow-500 flex items-center justify-center mb-2">
                 <i class="fas fa-calendar-check"></i>
