--- a/book.html
+++ b/book.html
@@ -792,31 +792,38 @@ input:checked + .toggle-slider:before {
                         </div>
                     </div>
                     <!-- Quick Actions -->
-    <div className="bg-white rounded-lg shadow p-4 mb-6">
-      <h2 className="text-lg font-semibold mb-4">Quick Actions</h2>
-      <div className="flex justify-center gap-4 flex-wrap">
-        <button className="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition w-32 md:w-48">
-          <div className="w-10 h-10 rounded-full bg-yellow-100 text-yellow-500 flex items-center justify-center mb-2">
-            <i className="fas fa-calendar-check"></i>
-          </div>
-          <span className="text-sm">Confirm Bookings</span>
+   <div class="bg-white rounded-lg shadow p-4 mb-6">
+    <h2 class="text-lg font-semibold mb-4">Quick Actions</h2>
+    <div class="grid grid-cols-2 grid-cols-3 md:grid-cols-3">
+        <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
+            <div class="w-10 h-10 rounded-full bg-yellow-100 text-yellow-500 flex items-center justify-center mb-2">
+                <i class="fas fa-calendar-check"></i>
+            </div>
+            <span class="text-sm">Confirm Bookings</span>
         </button>
-        
-        <button className="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition w-32 md:w-48">
-          <div className="w-10 h-10 rounded-full bg-green-100 text-green-500 flex items-center justify-center mb-2">
-            <i className="fas fa-file-invoice-dollar"></i>
-          </div>
-          <span className="text-sm">Check Invoices</span>
+
+      <!--  <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
+            <div class="w-10 h-10 rounded-full bg-blue-100 text-blue-500 flex items-center justify-center mb-2">
+                <i class="fas fa-camera"></i>
+            </div>
+            <span class="text-sm">Upload Gallery</span>
+        </button>-->
+
+        <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
+            <div class="w-10 h-10 rounded-full bg-green-100 text-green-500 flex items-center justify-center mb-2">
+                <i class="fas fa-file-invoice-dollar"></i>
+            </div>
+            <span class="text-sm">Check Invoices</span>
         </button>
-        
-        <button className="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition w-32 md:w-48">
-          <div className="w-10 h-10 rounded-full bg-red-100 text-red-500 flex items-center justify-center mb-2">
-            <i className="fas fa-camera-retro"></i>
-          </div>
-          <span className="text-sm">Deliver Photos</span>
+
+        <button class="flex flex-col items-center justify-center bg-gray-50 hover:bg-gray-100 p-4 rounded-lg transition">
+            <div class="w-10 h-10 rounded-full bg-red-100 text-red-500 flex items-center justify-center mb-2">
+                <i class="fas fa-camera-retro"></i>
+            </div>
+            <span class="text-sm">Deliver Photos</span>
         </button>
-      </div>
     </div>
+</div>
 <!-- Revenue Summary - Minimized -->
 <div class="bg-white rounded-lg shadow p-4 mb-6">
     <div class="flex justify-between items-center mb-4">
